Opened 14 years ago
Closed 14 years ago
#1161 closed defect (fixed)
ffplay: not possible to cycle audio channels when decoding fails
| Reported by: | ami_stuff | Owned by: | Marton Balint |
|---|---|---|---|
| Priority: | normal | Component: | ffplay |
| Version: | git-master | Keywords: | |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
when decoding fails it's not possible to cycle audio track anymore with "a" key
http://www.cccp-project.net/beta/test_files/%5bCCCP%5d_Mega_Weird_Audio_Test.mkv
C:\>ffplay -ast 21 [CCCP]_Mega_Weird_Audio_Test.mkv
ffplay version N-39267-g4082198 Copyright (c) 2003-2012 the FFmpeg developers
built on Mar 25 2012 20:25:08 with gcc 4.6.2
configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-ru
ntime-cpudetect --enable-avisynth --enable-bzlib --enable-frei0r --enable-libope
ncore-amrnb --enable-libopencore-amrwb --enable-libfreetype --enable-libgsm --en
able-libmp3lame --enable-libopenjpeg --enable-librtmp --enable-libschroedinger -
-enable-libspeex --enable-libtheora --enable-libvo-aacenc --enable-libvo-amrwben
c --enable-libvorbis --enable-libvpx --enable-libx264 --enable-libxavs --enable-
libxvid --enable-zlib
libavutil 51. 44.100 / 51. 44.100
libavcodec 54. 12.100 / 54. 12.100
libavformat 54. 3.100 / 54. 3.100
libavdevice 53. 4.100 / 53. 4.100
libavfilter 2. 65.102 / 2. 65.102
libswscale 2. 1.100 / 2. 1.100
libswresample 0. 10.100 / 0. 10.100
libpostproc 52. 0.100 / 52. 0.100
[wmalossless @ 02C618A0] bit-depth higher than 16 not implemented. Update your F
Fmpeg version to the newest one from Git. If the problem still occurs, it means
that your file has a feature which has not been implemented.
[wmalossless @ 02C67760] bit-depth higher than 16 not implemented. Update your F
Fmpeg version to the newest one from Git. If the problem still occurs, it means
that your file has a feature which has not been implemented.
[mpeg4 @ 0217B3E0] Invalid and inefficient vfw-avi packed B frames detected
[wmalossless @ 02C618A0] bit-depth higher than 16 not implemented. Update your F
Fmpeg version to the newest one from Git. If the problem still occurs, it means
that your file has a feature which has not been implemented.
[wmalossless @ 02C67760] bit-depth higher than 16 not implemented. Update your F
Fmpeg version to the newest one from Git. If the problem still occurs, it means
that your file has a feature which has not been implemented.
Input #0, matroska,webm, from '[CCCP]_Mega_Weird_Audio_Test.mkv':
Metadata:
title : Macross Plus - First Simulator Test
creation_time : 2006-08-07 03:59:51
Duration: 00:01:03.70, start: 0.000000, bitrate: 6167 kb/s
Stream #0:0(eng): Video: mpeg4 (Advanced Simple Profile) (XVID / 0x44495658)
, yuv420p, 656x464 [SAR 1:1 DAR 41:29], SAR 116:123 DAR 4:3, 23.98 fps, 23.98 tb
r, 1k tbn, 23.98 tbc (default)
Metadata:
title : Macross Plus - First Simulator Test
Stream #0:1(eng): Audio: ac3, 48000 Hz, 5.1(side), s16, 448 kb/s (default)
Metadata:
title : AC3 6ch Audio
Stream #0:2(jpn): Audio: ac3, 48000 Hz, stereo, s16, 192 kb/s
Metadata:
title : AC3 2ch Audio
Stream #0:3(eng): Audio: mp3, 48000 Hz, stereo, s16, 192 kb/s
Metadata:
title : AudX HGHQ 6ch Audio
Stream #0:4(eng): Audio: mp3, 48000 Hz, mono, s16, 192 kb/s
Metadata:
title : AudX SPBQ 6ch Audio
Stream #0:5(jpn): Audio: sipr (0[1][0][0] / 0x0130), 16000 Hz, 1 channels, f
lt, 16 kb/s
Metadata:
title : ACELP Sipro Mono Audio
Stream #0:6(jpn): Audio: adpcm_ms ([2][0][0][0] / 0x0002), 11025 Hz, 2 chann
els, s16, 88 kb/s
Metadata:
title : MS ADPCM 2ch Audio
Stream #0:7(jpn): Audio: adpcm_ima_wav ([17][0][0][0] / 0x0011), 11025 Hz, 2
channels, s16, 88 kb/s
Metadata:
title : IMA ADPCM 2ch Audio
Stream #0:8(jpn): Audio: adpcm_yamaha ( [0][0][0] / 0x0020), 16000 Hz, 1 cha
nnels, s16, 64 kb/s
Metadata:
title : Yamaha ADPCM Mono Audio
Stream #0:9(jpn): Audio: g726 (E[0][0][0] / 0x0045), 8000 Hz, 1 channels, s1
6, 32 kb/s
Metadata:
title : G.726 ADPCM Mono Audio
Stream #0:10(jpn): Audio: pcm_mulaw ([7][0][0][0] / 0x0007), 8000 Hz, 2 chan
nels, s16, 128 kb/s
Metadata:
title : +--Law 2ch Audio
Stream #0:11(jpn): Audio: pcm_alaw ([6][0][0][0] / 0x0006), 8000 Hz, 2 chann
els, s16, 128 kb/s
Metadata:
title : A-Law 2ch Audio
Stream #0:12(jpn): Audio: gsm_ms (1[0][0][0] / 0x0031), 44100 Hz, 1 channels
, s16, 71 kb/s
Metadata:
title : GSM 6.10 Mono Audio
Stream #0:13(jpn): Audio: truespeech ("[0][0][0] / 0x0022), 8000 Hz, 1 chann
els, s16, 8 kb/s
Metadata:
title : TrueSpeech Mono Audio
Stream #0:14(jpn): Audio: wmav2 (a[1][0][0] / 0x0161), 44100 Hz, 2 channels,
s16, 64 kb/s
Metadata:
title : WMA7 2ch Audio
Stream #0:15(jpn): Audio: wmav2 (a[1][0][0] / 0x0161), 44100 Hz, 2 channels,
s16, 64 kb/s
Metadata:
title : WMA8 2ch Audio
Stream #0:16(jpn): Audio: wmavoice ([10][0][0][0] / 0x000A), 22050 Hz, 1 cha
nnels, flt, 20 kb/s
Metadata:
title : WMA9 Voice Mono Audio
Stream #0:17(jpn): Audio: wmav2 (a[1][0][0] / 0x0161), 48000 Hz, 2 channels,
s16, 64 kb/s
Metadata:
title : WMA9.2 Std 2ch Audio
Stream #0:18(eng): Audio: wmapro (b[1][0][0] / 0x0162), 48000 Hz, 5.1, flt,
192 kb/s
Metadata:
title : WMA9.1 Pro 6ch Audio
Stream #0:19(jpn): Audio: wmapro (b[1][0][0] / 0x0162), 48000 Hz, stereo, fl
t, 80 kb/s
Metadata:
title : WMA9.1 Pro 2ch Audio
Stream #0:20(eng): Audio: wmapro (b[1][0][0] / 0x0162), 48000 Hz, 5.1, flt,
192 kb/s
Metadata:
title : WMA10 Pro 6ch Audio
Stream #0:21(jpn): Audio: wmapro (b[1][0][0] / 0x0162), 48000 Hz, stereo, fl
t, 64 kb/s
Metadata:
title : WMA10 Pro 2ch Audio
Stream #0:22(eng): Audio: wmalossless (c[1][0][0] / 0x0163), 48000 Hz, 6 cha
nnels, s32, 1882 kb/s
Metadata:
title : WMA9.1 Lossless 6ch Audio
Stream #0:23(jpn): Audio: wmalossless (c[1][0][0] / 0x0163), 48000 Hz, 2 cha
nnels, s32, 774 kb/s
Metadata:
title : WMA9.1 Lossless 2ch Audio
Stream #0:24(jpn): Audio: cook, 44100 Hz, stereo, flt
Metadata:
title : RA6 G2 Cook 2ch Audio
Stream #0:25(jpn): Audio: atrac3, 44100 Hz, 2 channels, s16
Metadata:
title : RA8 ATRC 2ch Audio
Stream #0:26(eng): Audio: cook, 44100 Hz, 5.1, flt
Metadata:
title : RA8 Cook 6ch Audio
Stream #0:27(jpn): Audio: cook, 44100 Hz, stereo, flt
Metadata:
title : RA8 Cook 2ch Audio
Stream #0:28(jpn): Audio: cook, 44100 Hz, mono, flt
Metadata:
title : RA8 Cook Mono Audio
Stream #0:29(jpn): Audio: aac, 32000 Hz, stereo, s16
Metadata:
title : RA10 RAAC 2ch Audio
Stream #0:30(jpn): Audio: aac, 44100 Hz, stereo, s16
Metadata:
title : RA10 RACP 2ch Audio
[mpeg4 @ 0217B3E0] Invalid and inefficient vfw-avi packed B frames detected
[wmalossless @ 02C618A0] bit-depth higher than 16 not implemented. Update your F
Fmpeg version to the newest one from Git. If the problem still occurs, it means
that your file has a feature which has not been implemented.
13.10 A-V: 0.000 fd= 0 aq= 0KB vq= 86KB sq= 0B f=0/0
Change History (3)
comment:1 by , 14 years ago
| Component: | undetermined → FFplay |
|---|---|
| Reproduced by developer: | set |
| Status: | new → open |
| Version: | unspecified → git-master |
comment:2 by , 14 years ago
| Owner: | set to |
|---|
comment:3 by , 14 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Note:
See TracTickets
for help on using tickets.



Fixed in commit 8c9971c35ee8fd01978a592f8f364755494f9a9a.