ffplay: fix stream cycling if audio decoding fails

Fixes ticket 1161.

Signed-off-by: Marton Balint <cus@passwd.hu>